# cmake_test

./: .gitignore  CMakeLists.txt  clean.sh  main.cpr  run.sh  tree.txt
example/projectA/: CMakeLists.txt  main.c
example/projectB/: CMakeLists.txt  main.c
lib/array/: array.c  array.h
lib/list/: CMakeLists.txt  list.c  list.h
